--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,9 +1,9 @@
 @mixin restorant-navigation {
     display: flex;
     flex-direction: row;
-    padding: 30px 0 15px 0;
-    /* margin: 20px 0 0 0; */
+    /* padding: 30px 0 15px 0; */
     align-items: center;
+    position: relative;
     justify-content: flex-start;
 
     a {
@@ -12,14 +12,16 @@
 
     i {
         font-size: 20px;
-        color: gray;
-        margin: 0 25px;
+        color: #000;
+        margin: 0 -30px 0 28px;
     }
 
     img {
-        position: relative;
-        width: 170px;
-        padding: 0 0 0 53px;
+        width: 175px;
+        align-items: center;
+        display: flex;
+        margin: auto;
+        // padding-left: -10px;
     }
 }
 
@@ -28,9 +30,7 @@
     display: flex;
     flex-direction: row;
     padding: 30px 0 15px 0;
-    /* margin: 20px 0 0 0; */
     align-items: center;
-    // /* justify-content: flex-start;
 
     a {
         text-decoration: none;
@@ -49,9 +49,6 @@
 }
 
 @mixin menu-about-pages {
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
     position: relative;
     margin-top: -60px;
     background-color: #fafafa;
@@ -102,13 +99,16 @@
 @mixin dish {
     width: 75%;
     display: flex;
-    align-items: flex-end;
-    margin: 0 0 17px 0;
+    align-items: center;
+    justify-content: space-between;
 
     span {
+        margin-right: 10px;
+        margin-top: 40px;
+
         font: {
             family: Roboto;
-            size: 18px;
+            size: 16px;
             weight: 600;
         }
     }
@@ -118,30 +118,33 @@
 @mixin dish-title {
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 125%;
-    margin-right: 10px;
+    width: 95%;
 
     h3 {
-        width: 70%;
+        width: 90%;
         overflow: visible;
         white-space: pre-line;
         text-overflow: ellipsis;
-        padding-bottom: 5px;
+        padding-bottom: 14px;
+        // &:hover{
+        //     width: 90%;
+        // }
 
         font: {
             family: $text-font;
-            size: 20px;
+            size: 19px;
             weight: 600;
 
         }
     }
 
     p {
+        width: 90%;
         color: gray;
 
         font: {
             family: $text-font;
-            size: 17px;
+            size: 16px;
         }
 
         &:hover {
@@ -244,7 +247,6 @@
         margin-left: 15px;
 
         p {
-            // margin-left: 30px;
             position: relative;
             display: flex;
             font-size: 20px;
@@ -252,20 +254,18 @@
 
         a {
             text-decoration: none;
-            // display: flex;
             justify-content: flex-start;
             color: #fff;
-            // font-size: 18px;
             padding: 0 15px;
             margin-bottom: 5px;
         }
 
         .fa-hands-helping {
             color: #fff;
-            // padding: 10px 0;
+            padding: 10px 0;
             transform: rotate(-20deg);
             font-size: 14px;
-            margin: 0 0 0 -10px;
+            margin: 0 10px 0 0;
         }
 
         .fa-utensils {
